tdf#90943 Don't ask to move cells if they are empty

During merge of cells, test of empty cells was wrong.
Test of first column should not be done if there is only 1 row

Change-Id: If8011f3e6d6e9006d242a8c2ef0fcb2ce12180ad